--- a/res/layout/fragment_neuesbankkonto.xml
+++ b/res/layout/fragment_neuesbankkonto.xml
@@ -194,7 +194,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
                 android:background="@drawable/buttonbg"
-                android:onClick="neuesKontoHinzufuegen"
+                android:onClick="neuesKontoAnlegenUndSpinnerZeigen"
                 android:text="@string/sync_button"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
@@ -205,6 +205,5 @@
        android:id="@+id/darkenScreen"
        android:layout_height="0dp"
        android:layout_width="0dp"
-       android:contentDescription = "Popup Fade out"
-       android:src="@drawable/trans_black" />
+       android:contentDescription = "Popup Fade out"  />
 </FrameLayout>
