--- a/res/layout/fragment_kontoverwaltung.xml
+++ b/res/layout/fragment_kontoverwaltung.xml
@@ -34,7 +34,8 @@
                 android:id="@+id/neuesKontoAnlegen"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_margin="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1.0"
                 android:background="@drawable/buttonbg"
                 android:onClick="neuesBankkontoAnlegen"
@@ -43,60 +44,108 @@
                 android:visibility="visible" />
         </LinearLayout>
 
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
 
-        <TextView
-            android:id="@+id/textView36"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/einstellungen_erklaerung2"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="00dp"
-            android:orientation="horizontal"
-            android:paddingBottom="1.0dip"
-            android:paddingLeft="4.0dip"
-            android:paddingRight="4.0dip"
-            android:paddingTop="5.0dip" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="0dp"
+            android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/delete_account"
+            <TextView
+                android:id="@+id/textView33"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
-                android:onClick="deleteAccount"
-                android:text="@string/delete_button"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="15dp"
+                android:text="@string/einstellungen_erklaerung3"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="0dp"
+                android:orientation="horizontal"
+                android:paddingBottom="1.0dip"
+                android:paddingLeft="4.0dip"
+                android:paddingRight="4.0dip"
+                android:paddingTop="5.0dip" >
+
+                <Button
+                    android:id="@+id/einbankkontoentfernen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/buttonbg"
+                    android:onClick="neuesBankkontoAnlegen"
+                    android:text="Ein Bankkonto entfernen"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:visibility="visible" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/textView36"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/einstellungen_erklaerung2"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="00dp"
+                android:orientation="horizontal"
+                android:paddingBottom="1.0dip"
+                android:paddingLeft="4.0dip"
+                android:paddingRight="4.0dip"
+                android:paddingTop="5.0dip" >
+
+                <Button
+                    android:id="@+id/delete_account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/buttonbg"
+                    android:onClick="deleteAccount"
+                    android:text="@string/delete_button"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView45"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginTop="100dp"
+                android:text="@string/copyright1"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/textView31"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="6dp"
+                android:text="@string/copyright2"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView45"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginTop="100dp"
-            android:text="@string/copyright1"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <TextView
-            android:id="@+id/textView31"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginBottom="12dp"
-            android:layout_marginTop="6dp"
-            android:text="@string/copyright2"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
 </ScrollView>
