--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <item name="orange" type="color">#FF7609</item>
+     <item name="green" type="color">#00FF00</item>
 </resources>
